@@ -1,5 +1,10 @@
 2004-02-19  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* ogdi/drivers/vrf/vrf.c: fixed serious bug in releaseAllLayers(). 
+	Only every other layer was effectively being released resulting in 
+	major leaks of file handles and other resources in application 
+	accessing multiple layers at once and not explicitly releasing them.
+
 	* vpflib/musedir.c: added some include files to avoid warnings in
 	unix builds.
 
